videos.html: add to top link at bottom again, aligned correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,15 +602,6 @@ a.link_active:hover {
         no-repeat
 }
 
-/* #main-container-videos {
-    width: 100%;
-    position: relative;
-    height: 1400px;
-    text-align: center;
-} */
-
-/* NEW */
-
 .video-box {
     margin: 0;
     width: 100%;
@@ -629,6 +620,22 @@ a.link_active:hover {
     left: 0;
   }
   
+    #to_top_videos {
+    position: absolute;
+    display: inline-block;
+    margin: 75% -8% 0 auto;
+    text-align: center;
+    right: 50%;
+    width: 16%;
+    z-index: 6;
+}
+
+    #footer-under-videos {
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    z-index: 3;
+}
 
   /* END OF NEW */
 
@@ -663,22 +670,6 @@ iframe {
     position: relative;
     text-align: center;
     margin: 0 auto 50px auto;
-    z-index: 3;
-} */
-/* 
-#to_top_videos {
-    position: absolute;
-    display: inline;
-    margin: 697vh auto 0 auto;
-    text-align: center;
-    right: 47%;
-    z-index: 6;
-} */
-
-/* #footer-under-videos {
-    width: 100%;
-    height: 50px;
-    background-color: black;
     z-index: 3;
 } */
 
